--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="submit">Применить</string>
     <string name="nickname">Никнейм</string>
     <string name="profile_email">email</string>
+    <string name="login">Логин/Email</string>
+    <string name="password">Пароль</string>
+    <string name="enter">Войти</string>
 </resources>
