--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="login">Логин/Email</string>
     <string name="password">Пароль</string>
     <string name="enter">Войти</string>
+    <string name="exit">Выйти</string>
 </resources>
